2018-07-19  Riccardo Mottola <rm@gnu.org>

	* DBSoap+Deleting.m
	Fix cycle exit condition!

2018-07-19  Riccardo Mottola <rm@gnu.org>

	* DBSoap.h
	* DBSoap.m
	* DBSoap+Deleting.m
	Undelete API.

2018-07-19  Riccardo Mottola <rm@gnu.org>

	* DBSoap.h
	* DBSoap.m
	* DBSoap+Updating.m
	implement getUpdated API.

2018-07-18  Riccardo Mottola <rm@gnu.org>

	* DBSoap+Deleting.m
	Fix memory error

2018-07-17  Riccardo Mottola <rm@gnu.org>

	* DBSoap+Deleting.m
	* DBSoap.h
	* DBSoap.m
	* DBSoapCSV.h
	* DBSoapCSV.m
	implement getDeleted API

2018-05-08  Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
	Fix: use cloned connection for query execution.

2018-05-04  Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.h
	* DBSoapCSV.m
	* DBSoap.h
	* DBSoap.m
	* DBSoap+Selecting.m
	Implement retrieve call.

2018-04-23  Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Use login.salesforce.com as endpoint.

2017-11-10  Riccardo Mottola <rm@gnu.org>

	* DBSoap+Creating.m
	Support nillable fields also in create.

2017-11-10  Riccardo Mottola <rm@gnu.org>

	* DBSoap+Creating.m
	Better exception handling.

2017-11-10  Riccardo Mottola <rm@gnu.org>

	* DBSoap.h
	* DBSoap.m
	* DBSoap+Creating.m
	* DBSoap+Deleting.m
	* DBSoap+Updating.m
	* DBSoap+Selecting.m
	Factor out CRUD method to separate files in categoris: better readibility.

2017-11-09 Riccardo Mottola <rm@gnu.org>

	* DBCSVReader.m
	Don't choke with an empty file.

2017-11-03 Riccardo Mottola <rm@gnu.org>

	* DBSFTypeWrappers.h
        * DBSFTypeWrappers.m
	* DBSoap.m
        Simplify initializers and uniform to initWithSFString when parsing results.

2017-11-02 Riccardo Mottola <rm@gnu.org>

	* DBSFTypeWrappers.h
        * DBSFTypeWrappers.m
	* DBSoap.m
        Date and DateTime types.

2017-11-01 Riccardo Mottola <rm@gnu.org>

	* DBSFTypeWrappers.h
        * DBSFTypeWrappers.m
	* DBSoap.m
	* DBHTMLWriter.m
        Handle Percentage.

2017-11-01 Riccardo Mottola <rm@gnu.org>

	* DBSFTypeWrappers.h
        * DBSFTypeWrappers.m